kubernetes/prod/app-prod-deployment-FastAPI.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nasa-power-prod-fastapi
  namespace: alozano0304
  labels:
    app: nasa-power-prod-fastapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nasa-power-prod-fastapi
  template:
    metadata:
      labels:
        app: nasa-power-prod-fastapi
    spec:
      containers:
        - name: nasa-power-prod-fastapi
          image: alozano0304/nasa-power-api:1.0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
