kubernetes/prod/app-prod-deployment-worker.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nasa-power-prod-worker
  namespace: alozano0304
  labels:
    app: nasa-power-prod-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nasa-power-prod-worker
  template:
    metadata:
      labels:
        app: nasa-power-prod-worker
    spec:
      containers:
        - name: nasa-power-prod-worker
          image: alozano0304/nasa-power-worker:1.0
          imagePullPolicy: Always
          command: ["uv", "run", "worker.py"]
